# pytest-mpiexec

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
examples/: conftest.py  test_mpi.py
pytest_mpiexec/: pytest_plugin.py
tests/: test_mpiexec.py
