[project]
name = "pytest-mpiexec"
description = "pytest plugin for running individual tests with mpiexec"
keywords = ["pytest", "mpi"]
authors = [
    {name = "Min RK", email = "benjaminrk@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Framework :: Pytest",
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "pytest",
    "pytest-reportlog",
    "mpi4py",
]
[project.entry-points.pytest11]
mpiexec = "pytest_mpiexec.pytest_plugin"

[project.urls]
Documentation = "https://github.com/minrk/pytest-mpiexec#readme"
Issues = "https://github.com/minrk/pytest-mpiexec/issues"
Source = "https://github.com/minrk/pytest-mpiexec"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatch ref: https://hatch.pypa.io/latest/
#
[tool.hatch.version]
path = "pytest_mpiexec/__init__.py"

# autoflake is used for autoformatting Python code
#
# ref: https://github.com/PyCQA/autoflake#readme
#
[tool.autoflake]
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
#remove-unused-variables = true


# isort is used for autoformatting Python code
#
# ref: https://pycqa.github.io/isort/
#
[tool.isort]
profile = "black"


# black is used for autoformatting Python code
#
# ref: https://black.readthedocs.io/en/stable/
#
[tool.black]
# target-version should be all supported versions, see
# https://github.com/psf/black/issues/751#issuecomment-473066811
target_version = [
    "py37",
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.tbump]
github_url = "https://github.com/minrk/pytest-mpiexec"

[tool.tbump.version]
current = "0.0.1a2"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>((a|b|rc)\d+)|)
  \.?
  (?P<dev>(?<=\.)dev\d*|)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "pytest_mpiexec/__init__.py"
